--- a/update_supply_chain_information/supply_chains/templates/common_base.html
+++ b/update_supply_chain_information/supply_chains/templates/common_base.html
@@ -39,8 +39,8 @@ This template will contain common base components to be used across Forms and Vi
     <script>
         document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
     </script>
-    <nav role="navigation">
-        <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+    <nav aria-labelledby="outer-nav">
+        <a href="#main-content" id="outer-nav" class="govuk-skip-link">Skip to main content</a>
     </nav>
     <header role="banner">
         <div class="govuk-header" data-module="govuk-header">
