--- a/update_supply_chain_information/supply_chains/templates/includes/sa_info_list.html
+++ b/update_supply_chain_information/supply_chains/templates/includes/sa_info_list.html
@@ -58,7 +58,7 @@
         Which other government departments are supporting this strategic action?
       </dt>
       <dd class="govuk-summary-list__value">
-        {{ action.supporting_organisations|join:", "|default:"No information" }}
+        {{ action.supporting_organisations|default:"No information" }}
       </dd>
       <dd class="govuk-summary-list__actions">
         <a class="govuk-link" href="#">
