--- a/update_supply_chain_information/chain_details/templates/chain_details_list.html
+++ b/update_supply_chain_information/chain_details/templates/chain_details_list.html
@@ -17,6 +17,7 @@
     <div class="govuk-summary-list__row">
         <dd class="govuk-summary-list__value">
             <a href="#" class="govuk-link govuk-!-font-weight-bold">{{ sc.name }}</a>
+            <p class="scd-description govuk-!-font-size-16"> {{ sc.description|truncatewords:30 }} </p>
         </dd>
     </div>
 
