--- a/update_supply_chain_information/supply_chains/templates/sc_home.html
+++ b/update_supply_chain_information/supply_chains/templates/sc_home.html
@@ -2,18 +2,37 @@
 
 {% block page_title %}Supply chains – {{ block.super }}{% endblock %}
 
+{% block breadcrumbs %}
+<nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
+      </li>
+    </ol>
+</nav>
+{% endblock %}
+
+
 {% block body %}
-    <h1 class="govuk-heading-xl">Update supply chain information</h1>
+    <h1 class="govuk-heading-xl">Monthly update</h1>
     <p class="govuk-body">
-        It's important to keep your departmental action plan records up to date. This is so we can work towards constantly improving the UK's supply chain resilience.
+        Keep your monthly action plan up to date so we can work towards constantly improving the UK's supply chain resilience.
     </p>
+
     {% if update_complete %}
-        <h2 class="govuk-heading-l">Your monthly update is complete</h2>
-        <p class="govuk-body">
-            All supply chains have been completed for this month.
-        </p>
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+            <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                No action required
+            </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">
+                All supply chains have been completed for this month.
+            </p>
+            </div>
+        </div>
     {% else %}
-        <h2 class="govuk-heading-l">Complete your monthly update</h2>
         <ul class="govuk-list govuk-list--bullet">
             <li>
                 You need to complete your monthly update. Complete <strong>{{ num_in_prog_supply_chains }} supply chain{{ num_in_prog_supply_chains|pluralize }}</strong> by
@@ -25,6 +44,7 @@
         </ul>
     {% endif %}
 
+    <br>
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
@@ -49,4 +69,5 @@
         {% include 'includes/pagination.html' with objects=supply_chains objects_name="supply chains" %}
     {% endif %}
 
+    <a href={% url 'index' %} class="govuk-button govuk-button--secondary">Back</a>
 {% endblock %}
