--- a/update_supply_chain_information/chain_details/templates/chain_details_info.html
+++ b/update_supply_chain_information/chain_details/templates/chain_details_info.html
@@ -39,6 +39,10 @@
 
 <br>
 
+<h2>Space for sub components</h2>
+
+<br>
+
 <div class="app-back-to-top" data-module="app-back-to-top">
   <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
     <svg role="presentation" focusable="false" class="app-back-to-top__icon" xmlns="http://www.w3.org/2000/svg"
