--- a/update_supply_chain_information/chain_details/templates/chain_details_info.html
+++ b/update_supply_chain_information/chain_details/templates/chain_details_info.html
@@ -42,6 +42,7 @@
 <h2>Space for sub components</h2>
 
 <br>
+    {% include "scenario_assessment.html" %}
 
 <div class="app-back-to-top" data-module="app-back-to-top">
   <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
