Add GSC notes section.

--- a/update_supply_chain_information/chain_details/templates/gsc_notes.html
+++ b/update_supply_chain_information/chain_details/templates/gsc_notes.html
@@ -1,6 +1,6 @@
 {% if update_text %}
-    <p class="govuk-body">{{ update_text }}</p>
+    <p class="govuk-body-s govuk-!-margin-bottom-1">{{ update_text }}</p>
 {% endif %}
 {% if review_text %}
-    <p class="govuk-body">{{ review_text }}</p>
+    <p class="govuk-body-s govuk-!-margin-bottom-0">{{ review_text }}</p>
 {% endif %}
