--- a/update_supply_chain_information/assets/stylesheets/application.scss
+++ b/update_supply_chain_information/assets/stylesheets/application.scss
@@ -59,3 +59,7 @@ span.moj-sub-navigation__link:hover {
   grid-template-columns: auto auto;
   grid-gap: 10px;
 }
+
+.app-dit-details__text {
+  border-left-color: transparent;
+}
