--- a/update_supply_chain_information/chain_details/templates/chain_details_info.html
+++ b/update_supply_chain_information/chain_details/templates/chain_details_info.html
@@ -41,6 +41,8 @@
 
 <h2>Space for sub components</h2>
 
+{% include "includes/chain_stages.html" %}
+
 <br>
 
 <div class="app-back-to-top" data-module="app-back-to-top">
