--- a/update_supply_chain_information/chain_details/templates/includes/chain_stages.html
+++ b/update_supply_chain_information/chain_details/templates/includes/chain_stages.html
@@ -12,6 +12,8 @@
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
             {% for stage in supply_chains %}
+            {% with it=forloop.counter|stringformat:"i" %}
+            {% with heading="accordion-default-heading-"|add:it content="accordion-default-content-"|add:it %}
             <div class="govuk-accordion__section ">
                 <div class="govuk-accordion__section-header">
                     <h2 class="govuk-accordion__section-heading">
@@ -22,7 +24,7 @@
                 </div>
                 <div id={{content}} class="govuk-accordion__section-content"
                     aria-labelledby={{heading}}>
-                    {% include "includes/sc_key_info_list.html" %}
+                    {% include "includes/stage_section.html" %}
                 </div>
             </div>
             {% endfor %}
