--- a/update_supply_chain_information/chain_details/templates/includes/chain_stages.html
+++ b/update_supply_chain_information/chain_details/templates/includes/chain_stages.html
@@ -1,3 +1,5 @@
+{% load gsc_notes %}
+
 <details class="govuk-details component-panel" data-module="govuk-details" id="chain-stages">
     <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text govuk-!-font-weight-bold">
@@ -7,27 +9,32 @@
     <br>
     <div class="govuk-details__text app-dit-details__text">
         <p class="govuk-body-s">
-            View the stages involved in a supplu chain. Get information about products, services, companies, activities, countries, transport points and sectors.
+            View the stages involved in a supply chain. Get information about products, services, companies, activities, countries, transport points and sectors.
         </p>
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-            {% for stage in supply_chains %}
+            {% for stage in stages %}
             {% with it=forloop.counter|stringformat:"i" %}
             {% with heading="accordion-default-heading-"|add:it content="accordion-default-content-"|add:it %}
             <div class="govuk-accordion__section ">
                 <div class="govuk-accordion__section-header">
                     <h2 class="govuk-accordion__section-heading">
                         <span class="govuk-accordion__section-button" id={{heading}}>
-                            {{ stage.name }}
+                            {{ stage.get_name_display }}
                         </span>
                     </h2>
                 </div>
                 <div id={{content}} class="govuk-accordion__section-content"
                     aria-labelledby={{heading}}>
-                    {% include "includes/stage_section.html" %}
+                    {% include "includes/stage_section.html" with stage=stage %}
                 </div>
             </div>
+            {% endwith %}
+            {% endwith %}
             {% endfor %}
+        </div>
+        <div class="app-dit-gsc-notes">
+            {% gsc_notes instance=stage_notes %}
         </div>
     </div>
 </details>
