Minor styling changes

--- a/update_supply_chain_information/chain_details/templates/scenario_assessment.html
+++ b/update_supply_chain_information/chain_details/templates/scenario_assessment.html
@@ -1,8 +1,8 @@
 {% load gsc_notes %}
 
-<details class="govuk-details app-dit-panel" data-module="govuk-details" id="supply-chain-scenario-testing">
+<details class="govuk-details component-panel" data-module="govuk-details" id="supply-chain-scenario-testing">
     <summary class="govuk-details__summary">
-    <span class="govuk-details__summary-text">
+    <span class="govuk-details__summary-text govuk-!-font-weight-bold">
       Scenario testing
     </span>
     </summary>
