--- a/update_supply_chain_information/chain_details/templates/scenario_assessment.html
+++ b/update_supply_chain_information/chain_details/templates/scenario_assessment.html
@@ -25,7 +25,7 @@
                         <div class="govuk-accordion__section-header">
                             <h2 class="govuk-accordion__section-heading">
                                 <span class="govuk-accordion__section-button" id="accordion-{{ scenario_assessment.title|slugify }}">
-                                    {% include "svg_rag_rating_icon.html" with rag_rating=scenario_assessment.rag_rating %}
+                                    {% include "svg_rag_rating_icon.html" with rag_rating=scenario_assessment.rag_rating|default:'None' %}
                                     {{ scenario_assessment.title }}
                                 </span>
                             </h2>
