--- a/update_supply_chain_information/action_progress/templates/action_progress_details.html
+++ b/update_supply_chain_information/action_progress/templates/action_progress_details.html
@@ -1,5 +1,5 @@
 {% extends "action_progress_base.html" %}
-
+{% load supply_chain_tags %}
 
 {% block page_header %}
 
@@ -24,11 +24,11 @@
 {% include "includes/action_details.html" %}
 
 <br>
-{% with qs_sap_link="https://data.trade.gov.uk/visualisations/link/6a51d70e-08e7-42cd-98d9-e5bb4c1db430" %}
-    <div class="govuk-grid-column-one-half govuk-!-padding-left-0" id="app-quicksight-countries-link">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-half" id="app-quicksight-countries-link">
         <ul class="govuk-list">
             <li>
-                <a href="{{ qs_sap_link }}" class="services-heading govuk-link govuk-!-font-weight-bold">Strategic action progress</a>
+                <a href="{% visualisation_link %}" class="services-heading govuk-link govuk-!-font-weight-bold">Strategic action progress</a>
 
                 <p class="home-services-para">
                     Find out more about all strategic action progress and status history.
@@ -36,7 +36,7 @@
             </li>
         </ul>
     </div>
-{% endwith %}
+</div>
 <br>
 <div class="app-back-to-top" data-module="app-back-to-top">
     <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
