--- a/update_supply_chain_information/supply_chains/templates/base.html
+++ b/update_supply_chain_information/supply_chains/templates/base.html
@@ -38,13 +38,11 @@
                 Strategic action summary
             </a>
         </li>
-        {% with qs_sap_link="https://data.trade.gov.uk/visualisations/link/6a51d70e-08e7-42cd-98d9-e5bb4c1db430" %}
         <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="{{ qs_sap_link }}">
+            <a class="govuk-header__link" href="{% visualisation_link %}">
                 Strategic action progress
             </a>
         </li>
-        {% endwith %}
         <li class="govuk-header__navigation-item {% if active_menu == 'scd' %} govuk-header__navigation-item--active{% endif %}">
             <a class="govuk-header__link" href={% url 'chain-details' %}>
                 Supply chain details
