--- a/update_supply_chain_information/supply_chains/templates/index.html
+++ b/update_supply_chain_information/supply_chains/templates/index.html
@@ -49,11 +49,10 @@
             </li>
         </ul>
     </div>
-    {% with qs_sap_link="https://data.trade.gov.uk/visualisations/link/6a51d70e-08e7-42cd-98d9-e5bb4c1db430" %}
     <div class="govuk-grid-column-one-half">
         <ul class="govuk-list">
             <li>
-                <a href="{{ qs_sap_link }}" class="services-heading govuk-link govuk-!-font-weight-bold">Strategic action progress</a>
+                <a href="{% visualisation_link %}" class="services-heading govuk-link govuk-!-font-weight-bold">Strategic action progress</a>
 
                 <p class="home-services-para">
                     Find out more about all strategic action progress and status history.
@@ -61,7 +60,6 @@
             </li>
         </ul>
     </div>
-    {% endwith %}
 </div>
 
 <div class="govuk-grid-row">
