--- a/update_supply_chain_information/supply_chains/templates/task_list.html
+++ b/update_supply_chain_information/supply_chains/templates/task_list.html
@@ -108,7 +108,9 @@
     {% endif %}
 
     {% if not view.update_submitted %}
-        <form action={% url 'supply-chain-task-list' supply_chain_slug=view.supply_chain.slug %} method="post">
+    {% comment %}
+    {% endcomment %}
+        <form action="" method="post">
             {% csrf_token %}
             <button class="govuk-button" data-module="govuk-button" type="submit">
                 Submit monthly update
