--- a/update_supply_chain_information/chain_details/templates/chain_details_info.html
+++ b/update_supply_chain_information/chain_details/templates/chain_details_info.html
@@ -41,6 +41,7 @@
 
 
 {% include "includes/chain_stages.html" %}
+{% include "includes/chain_vulnerabilities.html" %}
 {% include "scenario_assessment.html" %}
 
 <div class="govuk-grid-row">
