--- a/update_supply_chain_information/chain_details/templates/includes/vul_supply_stage.html
+++ b/update_supply_chain_information/chain_details/templates/includes/vul_supply_stage.html
@@ -4,14 +4,16 @@
     {% for char_id in '123'|make_list %}
     {% with it=forloop.counter|stringformat:"i" %}
     {% with heading="supply-accordion-heading-"|add:it content="supply-accordion-content-"|add:it %}
-    <div class="govuk-accordion__section ">
+    <div class="govuk-accordion__section">
         <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
                 <span class="govuk-accordion__section-button" id={{heading}}>
                     {% with rag="supply_rag_rating_"|add:char_id %}
                     {% getattribute_value stage rag as rag_value %}
-                    {% include "svg_rag_rating_icon.html" with rag_rating=rag_value|default:'None' %}
-                    {{char_id}} - {% get_vul_stage_title vul_title_list char_id %}
+                    <div class="vul-stage-grid">
+                        <div>{% include "svg_rag_rating_icon.html" with vulnerability="1" rag_rating=rag_value|default:'None' %}</div>
+                        <div>{{char_id}} - {% get_vul_stage_title vul_title_list char_id %}</div>
+                    </div>
                     {% endwith %}
                 </span>
             </h2>
