Changes within update views for SC Umbrella.

--- a/update_supply_chain_information/supply_chains/templates/supply_chains/monthly_update_timing_form.html
+++ b/update_supply_chain_information/supply_chains/templates/supply_chains/monthly_update_timing_form.html
@@ -32,7 +32,8 @@
                 Save and continue
             </button>
 
-            <a href="{% url 'supply-chain-task-list' supply_chain_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
+            {% get_tasklist_link strategic_action_update.supply_chain.slug as link %}
+            <a href="{{ link }}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
                 Cancel
             </a>
         </div>
