--- a/update_supply_chain_information/supply_chains/templates/task_list.html
+++ b/update_supply_chain_information/supply_chains/templates/task_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_title %}Update {{ view.supply_chain.name }} – {{ block.super }}{% endblock %}
+{% block page_title %}Update {{ view.supply_chain_name }} – {{ block.super }}{% endblock %}
 
 {% block breadcrumbs %}
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
@@ -17,7 +17,7 @@
 
 {% block body %}
 
-    <h1 class="govuk-heading-xl"> Update {{ view.supply_chain.name }} </h1>
+    <h1 class="govuk-heading-xl"> Update {{ view.supply_chain_name }} </h1>
 
     {% if not view.update_submitted %}
         {% if view.update_complete %}
