--- a/update_supply_chain_information/chain_details/templates/chain_details_info.html
+++ b/update_supply_chain_information/chain_details/templates/chain_details_info.html
@@ -21,6 +21,7 @@
         </div>
     </dl>
     {% include "includes/criticality/rating.html" %}
+    {% include "includes/maturity/rating.html" %}
     {% include "includes/chain_stages.html" %}
     {% include "includes/chain_vulnerabilities.html" %}
     {% include "scenario_assessment.html" %}
