--- a/update_supply_chain_information/chain_details/templates/includes/criticality/categories.html
+++ b/update_supply_chain_information/chain_details/templates/includes/criticality/categories.html
@@ -11,7 +11,7 @@
         <div class="govuk-details__text app-dit-details__text">
             <h4 class="govuk-heading-s">Impact on human health</h4>
             <p class="govuk-body-s">{% get_criticality_category_text criticality_rating_details criticality_rating_type "human_health" %}</p>
-            <h4 class="govuk-heading-s">Impact on national security (including public order</h4>
+            <h4 class="govuk-heading-s">Impact on national security (including public order)</h4>
             <p class="govuk-body-s">{% get_criticality_category_text criticality_rating_details criticality_rating_type "national_security" %}</p>
             <h4 class="govuk-heading-s">Impact on a strategic economic sector or the economy as a whole including reaching net zero</h4>
             <p class="govuk-body-s">{% get_criticality_category_text criticality_rating_details criticality_rating_type "economic" %}</p>
