--- a/update_supply_chain_information/chain_details/templates/includes/maturity_categories.html
+++ b/update_supply_chain_information/chain_details/templates/includes/maturity_categories.html
@@ -1,11 +1,10 @@
 {% load get_criticality_category_text %}
 
 <div class="custom-criticality-ratings">
-    {% for criticality_rating_type in criticality_rating_types %}
-    <details class="govuk-details component-panel" data-module="govuk-details" id="chain-stages" {% if criticality_rating == forloop.counter %}open{% endif %}>
+    <details class="govuk-details component-panel" data-module="govuk-details" id="chain-stages">
         <summary class="govuk-details__summary">
             <span class="govuk-details__summary-text govuk-!-font-weight-bold">
-                {{ criticality_rating_type|title }} - {{ forloop.counter }}
+                View details on maturity levels
             </span>
         </summary>
         <div class="govuk-details__text app-dit-details__text">
@@ -21,5 +20,4 @@
             <p class="govuk-body-s">A clear implementation plan is in place, with SMART actions, and a clear timeframe for completion.</p>
         </div>
     </details>
-    {% endfor %}
 </div>
