Setup PII and secret exclude

--- a/supply_chains/templates/privacy_notice.html
+++ b/supply_chains/templates/privacy_notice.html
@@ -92,7 +92,7 @@
     </p>
 
     <p>
-        To withdraw your consent, please contact the Data Protection Team at <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a> (details provided in the “Contacting us” paragraph at the end of this notice).
+        To withdraw your consent, please contact the Data Protection Team at <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a> (details provided in the “Contacting us” paragraph at the end of this notice).<!-- /PS-IGNORE -->
     </p>
 
     <br>
@@ -201,11 +201,11 @@
             Old Admiralty Building<br>
             Whitehall<br>
             LONDON<br>
-            SW1A 2DY<br>
+            SW1A 2DY<br><!-- /PS-IGNORE -->
         </p>
     </div>
 
-    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p>
+    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p><!-- /PS-IGNORE -->
 
     <br>
     <h2 class="govuk-heading-l">Contacting us</h2>
@@ -220,11 +220,11 @@
             Old Admiralty Building<br>
             Whitehall<br>
             LONDON<br>
-            SW1A 2DY<br>
+            SW1A 2DY<br><!-- /PS-IGNORE -->
         </p>
     </div>
 
-    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p>
+    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p><!-- /PS-IGNORE -->
 
     <p>
         The Data Protection Officer (DPO) is responsible for independent advice and monitoring of DIT's use of personal information.
@@ -244,16 +244,16 @@
             Water Lane<br>
             Wilmslow<br>
             Cheshire<br>
-            SK9 5AF<br>
+            SK9 5AF<br><!-- /PS-IGNORE -->
         </p>
     </div>
 
     <p>
-        Telephone: 0303 123 1113<br>
+        Telephone: 0303 123 1113<br><!-- /PS-IGNORE -->
         <a href="https://www.gov.uk/call-charges">Find out about call charges</a>
     </p>
 
-    <p>Email: <a href="mailto:casework@ico.org.uk">casework@ico.org.uk</a></p>
+    <p>Email: <a href="mailto:casework@ico.org.uk">casework@ico.org.uk</a></p><!-- /PS-IGNORE -->
 
     <p>
         Any complaint to the Information Commissioner is without prejudice to your right to seek redress through the courts.
@@ -282,11 +282,11 @@
             Old Admiralty Building<br>
             Whitehall<br>
             LONDON<br>
-            SW1A 2DY<br>
+            SW1A 2DY<br><!-- /PS-IGNORE -->
         </p>
     </div>
 
-    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p>
+    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p><!-- /PS-IGNORE -->
 
     <br>
     <div class="app-back-to-top" data-module="app-back-to-top">
