remove excess wording

--- a/supply_chains/templates/index.html
+++ b/supply_chains/templates/index.html
@@ -113,7 +113,7 @@
                 <a href="{% quicksight_overseas_intelligence_dashboard_url %}" class="services-heading govuk-link govuk-!-font-weight-bold">Overseas Intelligence</a>
 
                 <p class="home-services-para">
-                    Overseas Intelligence: View overseas intelligence information to identify global risks to supply chains.
+                    View overseas intelligence information to identify global risks to supply chains.
                 </p>
             </li>
         </ul>
