reword sub-titles

--- a/supply_chains/templates/index.html
+++ b/supply_chains/templates/index.html
@@ -36,7 +36,7 @@
 </p>
 
 
-<h3 class="govuk-heading-m" style="margin-bottom: 15px;">Supply chain information</h3>
+<h3 class="govuk-heading-m" style="margin-bottom: 15px;">Assurance portfolio</h3>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-<h3 class="govuk-heading-m" style="margin-bottom: 15px;">Visualisations</h3>
+<h3 class="govuk-heading-m" style="margin-bottom: 15px;">Analysis</h3>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
