reword another title

--- a/supply_chains/templates/index.html
+++ b/supply_chains/templates/index.html
@@ -30,7 +30,7 @@
 
 
 
-<h2 class="govuk-heading-l" style="margin-bottom: 15px;">Reporting summary</h2>
+<h2 class="govuk-heading-l" style="margin-bottom: 15px;">Reports and dashboards</h2>
 <p class="govuk-body-l">
     Information on how to strengthen<br> future supply chain resilience.
 </p>
